# capsensor-monitor

./: LICENSE  README.md  bootstrap.sh  flake.nix  pyproject.toml  ruff.toml
src/: app.py  config.py  data_viewer.py  exceptions.py  file_writer.py  input_parser.py  main.py  pipeline.py  plot_utils.py  processor.py  processor_utils.py  serial_iterator.py  utils.py
tests/: processor_utils_test.py
